--- a/slagents/intercom/llm.yaml
+++ b/slagents/intercom/llm.yaml
@@ -1,12 +1,12 @@
-name: llm_intercom_summary
+name: llm_user_profile_and_intercom_summary
 type: vanilla
 description: llm_agent is a vanilla agent based on LLM. Use this to summarize the user profile and intercom data.
-prompt_template: !prompt prompts.intercom_summary_prompt.PromptOfIntercomSummary
+prompt_template: !prompt slagents.prompts.intercom_summary_prompt.PromptOfIntercomSummary
 llm:
   # use gpt-3.5-turbo model
-  model_name: gpt-4-32k-0613
+  model_name: gpt-4-1106-preview
   params:
     temperature: 0.0
     top_p: 0.9
     repetition_penalty: 0.0
-    max_tokens: 500
+    max_tokens: 1048
