--- a/slagents/zendesk/agent.yaml
+++ b/slagents/zendesk/agent.yaml
@@ -8,8 +8,8 @@ target_tasks:
   - Summarize the help articles and provide the user with the most relevant information
 
 prompt_template:
-  Planner: !prompt intercom.prompt.IntercomPlannerPrompt
-  Solver: !prompt intercom.prompt.IntercomSolverPrompt
+  Planner: !prompt slagents.intercom.prompt.IntercomPlannerPrompt
+  Solver: !prompt slagents.intercom.prompt.IntercomSolverPrompt
 llm:
   Planner:
     model_name: gpt-4
@@ -26,6 +26,6 @@ llm:
       repetition_penalty: 0.0
       max_tokens: 1024
 plugins:
-  - !tool intercom.tool.GetUserData
-  - !tool intercom.tool.GetIntercomHistoryForUser
+  - !tool slagents.intercom.tool.GetUserData
+  - !tool slagents.intercom.tool.GetIntercomHistoryForUser
   - !include ./llm.yaml
