--- a/dockerfiles/Dockerfile.base
+++ b/dockerfiles/Dockerfile.base
@@ -15,9 +15,11 @@ RUN apk update && \
     tzdata \
     make \
     curl \
-    py3-setuptools \
-    libsm6 \
-    && rm -rf /var/lib/apt/lists/*
+    py-setuptools \
+    libxext \
+    libxrender \
+    libstdc++ \
+    && rm -rf /var/cache/apk/*
 
 # Upgrade pip and setuptools
 RUN pip install --upgrade pip setuptools
