--- a/dockerfiles/Dockerfile.base
+++ b/dockerfiles/Dockerfile.base
@@ -1,13 +1,6 @@
 # Start from a Python 3.10 Alpine image
 FROM python:3.10-alpine
-
-# Set environment variables to non-interactive (useful for automated builds)
-ENV PYTHONUNBUFFERED=1 \
-    PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONPATH=/code/agents \
-    LC_ALL=C.UTF-8 \
-    LANG=C.UTF-8
-
+ENV DEBIAN_FRONTEND=noninteractive
 # Install system dependencies
 RUN apk update && \
     apk add --no-cache \
@@ -30,6 +23,11 @@ RUN pip install --upgrade pip setuptools
 
 # Expose the port the app runs on
 EXPOSE 5000
+ENV PYTHONUNBUFFERED=1 \
+    PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONPATH=/code/agents \
+    LC_ALL=C.UTF-8 \
+    LANG=C.UTF-8
 
 # Copy only the requirements.txt initially to leverage Docker cache
 COPY requirements.txt /code/agents/requirements.txt
